<resources>
    <string name="app_name">Notepad</string>
    <string name="title">Title</string>
    <string name="note_content_hint">Note content…</string>
    <string name="security">Security</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="note_creation">Note Creation</string>
    <string name="notes">Notes</string>
    <string name="note_details">Note Details</string>
    <string name="unlock_note">Unlock note</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change">Change</string>
    <string name="change_password">Change Password</string>
    <string name="lock_icon">Lock icon</string>
</resources>
