<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.blumek.notepad.application.change_note_password.ChangeNotePasswordViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".application.change_note_password.ChangeNotePasswordFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/old_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:hint="@string/old_password"
                android:singleLine="true"
                android:inputType="textPassword"
                android:text="@={viewModel.changePassword.oldPassword}"
                android:layout_marginTop="10dp" />

            <EditText
                android:id="@+id/new_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:hint="@string/new_password"
                android:singleLine="true"
                android:inputType="textPassword"
                android:text="@={viewModel.changePassword.newPassword}"
                android:layout_marginTop="15dp" />

            <EditText
                android:id="@+id/new_password_confirmation_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:hint="@string/confirm_new_password"
                android:singleLine="true"
                android:inputType="textPassword"
                android:text="@={viewModel.changePassword.newPasswordConfirmation}"
                android:layout_marginTop="15dp" />

        </LinearLayout>

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_marginBottom="0dp"
            android:padding="17dp"
            android:textSize="16sp"
            android:text="@string/change"
            android:onClick="@{viewModel::onChangeClick}"/>

    </RelativeLayout>
</layout>