<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.blumek.notepad.application.note_persistence.NoteCreationViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".application.note_persistence.NoteCreationFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_above="@id/save_button"
            android:layout_marginBottom="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <EditText
                    android:id="@+id/title_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:autofillHints="title"
                    android:hint="@string/title"
                    android:singleLine="true"
                    android:text="@={viewModel.note.title}"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryLight"
                    android:theme="@style/EditTextTheme"
                    android:textSize="22sp"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/content_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:inputType="text|textMultiLine"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryLight"
                    android:theme="@style/EditTextTheme"
                    android:hint="@string/note_content_hint"
                    android:text="@={viewModel.note.content}"
                    android:textSize="22sp"
                    android:fontFamily="@font/roboto"
                    android:gravity="top"
                    android:layout_marginTop="15dp"
                    android:autofillHints="text" />

                <TextView
                    android:text="@string/security"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp"
                    android:fontFamily="@font/roboto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp" />

                <EditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/password"
                    android:text="@={viewModel.note.password}"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryLight"
                    android:theme="@style/EditTextTheme"
                    android:inputType="textPassword"
                    android:layout_marginTop="15dp"
                    android:autofillHints="password" />

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_marginBottom="0dp"
            android:background="@color/colorAccent"
            android:onClick="@{viewModel::onSaveClick}"
            android:padding="17dp"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </RelativeLayout>
</layout>