<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/notesFragment">

    <fragment
        android:id="@+id/notesFragment"
        android:name="com.blumek.notepad.application.notes.NotesFragment"
        android:label="@string/notes"
        tools:layout="@layout/notes_fragment">
        <action
            android:id="@+id/action_notesFragment_to_noteDetailsFragment"
            app:destination="@id/noteDetailsFragment" />
        <action
            android:id="@+id/action_notesFragment_to_noteCreationFragment"
            app:destination="@id/noteCreationFragment" />
    </fragment>

    <fragment
        android:id="@+id/noteDetailsFragment"
        android:name="com.blumek.notepad.application.note_details.NoteDetailsFragment"
        android:label="@string/note_details"
        tools:layout="@layout/note_details_fragment">
        <argument
            android:name="id"
            app:argType="string" />
        <action
            android:id="@+id/action_noteDetailsFragment_to_noteUpdateFragment"
            app:destination="@id/noteUpdateFragment" />
        <action
            android:id="@+id/action_noteDetailsFragment_to_changeNotePasswordFragment"
            app:destination="@id/changeNotePasswordFragment" />
    </fragment>
    <fragment
        android:id="@+id/noteCreationFragment"
        android:name="com.blumek.notepad.application.note_persistence.NoteCreationFragment"
        android:label="@string/note_creation"
        tools:layout="@layout/note_creation_fragment"/>
    <fragment
        android:id="@+id/noteUpdateFragment"
        android:name="com.blumek.notepad.application.note_persistence.NoteUpdateFragment"
        android:label="NoteUpdateFragment"
        tools:layout="@layout/note_update_fragment">
        <argument
            android:name="id"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/changeNotePasswordFragment"
        android:name="com.blumek.notepad.application.change_note_password.ChangeNotePasswordFragment"
        android:label="ChangeNotePasswordFragment"
        tools:layout="@layout/change_note_password_fragment">
        <argument
            android:name="id"
            app:argType="string" />
    </fragment>
</navigation>